# Rusterix

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.md  TERRAIN.md  main.rusteria  make_textures.rusteria  render_settings_example.toml  test.rsia
.github/: FUNDING.yml
benches/: rasterize_cube.rs  rasterize_map.rs
codegridfx/lib/: Cargo.toml
codegridfx/lib/src/: cell.rs  cellitem.rs  grid.rs  gridctx.rs  lib.rs  module.rs  routine.rs
embedded/: 2d_shader.wgsl  entity.py  entitymanager.py
embedded/shader/: 2d_overlay_shader.wgsl  2d_shader.wgsl  3d_overlay_shader.wgsl  3d_shader.wgsl
examples/: cube.rs  cube_shaded.rs  map.rs  minigame.rs  minigame_trace.rs  obj.rs
minigame/: Monster.py  Monster.rxe  Player.rxe  Readme.txt  world.rxm
rsia/: Cargo.toml
rsia/src/: main.rs
rsta/: Cargo.toml
rsta/src/: main.rs
rusteria/: Cargo.toml
rusteria/examples/: marble.rusteria  wood.rusteria  wood_ring.rusteria
rusteria/src/: ast.rs  compile.rs  idverifier.rs  lib.rs  main.rs  module.rs  optimize.rs  parser.rs  window.rs
rusteria/src/node/: execution.rs  nodeop.rs  program.rs
rusteria/src/textures/: interpolate.rs  mod.rs  multi_hash.rs  noise.rs  patterns.rs
rusteria/src/tool/: linedef.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/builder/: mod.rs
shared/src/parser/: map.rs
shared/src/scenebuilder/: d2preview.rs  mod.rs
src/: batch.rs  chunk.rs  client.rs  collision_world.rs  edge.rs  entity.rs  lib.rs  rasterizer.rs  rect.rs  render_settings.rs  rusterix.rs  scene.rs  scene_handler.rs  scenemanager.rs  server.rs  texture.rs  utils.rs  value.rs  value_toml.rs  vertexblend.rs  wavefront.rs
src/batch/: batch2d.rs  batch3d.rs  batchd2.rs  batchd3.rs  mod.rs
src/camera/: d3firstp.rs  d3iso.rs  d3orbit.rs  mod.rs
src/chunkbuilder/: d2chunkbuilder.rs  d2preview.rs  d3chunkbuilder.rs  mod.rs  surface_mesh_builder.rs  terrain_generator.rs
src/chunkbuilder/action/: PROPERTIES.md  mod.rs  recess.rs  ridge.rs  terrain.rs
src/client/: action.rs  daylight.rs  draw2d.rs  interpolation.rs  meta.rs  mod.rs  widget.rs
src/client/widget/: game.rs  messages.rs  mod.rs  screen.rs  text.rs
src/entities/: mod.rs
src/map/: bbox.rs  bones.rs  light.rs  linedef.rs  meta.rs  mini.rs  mod.rs  pixelsource.rs  sector.rs  softrig.rs  state.rs  surface.rs  terrain.rs  tile.rs  vertex.rs
src/parser/: map.rs  mod.rs
src/scenebuilder/: d2builder.rs  d2material.rs  d2preview.rs  d3builder.rs  mod.rs
src/script/: map.rs  mapscript.rs  mod.rs
src/server/: _region.rs  assets.rs  currency.rs  data.rs  debug.rs  entity.rs  item.rs  message.rs  mod.rs  py_fn.rs  region.rs  region_host.rs  regionctx.rs  regiondata.rs  regionpool.rs
src/shader/: grid.rs  mod.rs
src/shapestack/: material.rs  mod.rs  shape.rs  shapecontext.rs  shapeeffect.rs  shapefx.rs  shapefxgraph.rs  tilebuilder.rs
src/terrain/: chunk.rs  mod.rs
src/tracer/: mod.rs  trace.rs
src/vm/: builtin.rs  compile.rs  errors.rs  idverifier.rs  mod.rs  parser.rs  scanner.rs  value.rs
src/vm/node/: execution.rs  hosthandler.rs  nodeop.rs  program.rs
