[package]
name = "rusterix"
version = "0.2.8"
edition = "2024"
description = "Rusterix is a fast software renderer and game engine."
license = "Apache-2.0 AND MIT"
repository = "https://github.com/markusmoenig/Rusterix"
keywords = ["software", "rendering", "graphics", "game", "engine"]

[workspace]
members = [".", "rusteria"]

[dependencies]
rustpython = { version = "0.4.0", features = [
    "stdlib",
    "threading",
    "freeze-stdlib",
], default-features = false }
theframework = { version = "0.1.40", git = "https://github.com/markusmoenig/theframework" }
# theframework = "0.1.33"
# theframework = { path = "../TheFramework", default-features = true }
fontdue = "0.9.3"
rayon = "1.10"
vek = { version = "0.17.1", default-features = true }
earcutr = "0.4"
rect_packer = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.5"
rustpython-vm = { version = "0.4.0" }
walkdir = "2.5.0"
crossbeam-channel = "0.5.14"
ref_thread_local = "0.1.1"
bincode = "1.3.3"
rand = "0.9"
pathfinding = "4.13.1"
ordered-float = "3.1"
toml = "0.8.20"
rust-embed = { version = "8.5", default-features = true, features = [
    "include-exclude",
] }
indexmap = "2.7.1"
regex = "1.11.1"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
    "js",
]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "rasterize_map"
harness = false
